[project]
name = "parser-validations"
version = "0.1.1"
description = "Script to run parser validations using secops-wrapper"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.4.0",
    "jsondiff>=2.2.1",
    "secops>=0.35.3",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
