# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "Lastline"
version = "10.0"
description = "Lastline's Network Detection and Response platform, powered by AI, protects on-premises networks, email, and public cloud workloads from cyber threats."
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests==2.32.4",
    "tipcommon",
    "validators==0.33.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "soar-sdk",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
