# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "McAfeeActiveResponse"
version = "10.0"
description = "McAfee Active Response is endpoint detection and response software that helps you find and remediate advanced threats."
requires-python = ">=3.11,<3.12"
dependencies = [
    "dxlclient==5.6.0.0",
    "dxlmarclient==0.2.0",
    "pytest-mock>=3.15.1",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "soar-sdk",
    "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.5-py3-none-any.whl"
