# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "McAfeeATD"
version = "18.0"
description = "McAfee Advanced Threat Defense protects against advanced malware, including zero-day and advanced persistent threats."
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests==2.32.4",
    "tipcommon",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "soar-sdk",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
