[project]
name = "Connectors"
version = "7.0"
description = "A set of custom connectors created for Google SecOps Community to power up automation capabilities."
requires-python = ">=3.11,<3.12"
dependencies = [
    "cronex",
    "psycopg2-binary==2.9.10",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.7-py3-none-any.whl" }
cronex = { url = "https://files.pythonhosted.org/packages/ed/e9/419305235dd2f2b2038b6746cb57d32b3a5ebc0ef9600bdfd46d6da87232/cronex-0.1.3.1.tar.gz" }

tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.7-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }
[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
    "tipcommon",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
