[project]
name = "Enrichment"
version = "33.0"
description = "A set of entity enrichment actions to assist in the managing of entity attributes."
requires-python = ">=3.11,<3.12"
dependencies = [
    "environmentcommon",
    "geocoder==1.38.1",
    "ipwhois==1.3.0",
    "jsonpath-ng==1.7.0",
    "requests>=2.32.3",
    "tldextract>=5.3.0",
    "tipcommon",
    "whois-alt",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.0-py3-none-any.whl" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.0-py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
whois-alt = { url = "https://files.pythonhosted.org/packages/28/2c/9220dff07bedf7712a7b1b73f7d022be597d177f6b146380110db31cf71f/whois_alt-2.5.0.tar.gz" }

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
