[project]
name = "FileUtilities"
version = "23.0"
description = "A set of file utility actions created for Google SecOps Community to power up playbook capabilities.  "
requires-python = ">=3.11,<3.12"
dependencies = [
    "file-magic==0.4.1",
    "filelock==3.16.1",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "requests>=2.32.3",
    "environmentcommon",
    "tipcommon",
]

[dependency-groups]
dev = [
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.0-py3-none-any.whl" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.0-py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
