[project]
name = "GitSync"
version = "45.0"
description = "Sync Google SecOps integrations, playbooks, and settings with a GitHub, BitBucket or GitLab instance"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dulwich==0.24.1",
    "environmentcommon",
    "jinja2>=3.1.5",
    "packaging>=24.2",
    "paramiko>=3.5.0",
    "requests>=2.32.3",
    "tipcommon",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.7-py3-none-any.whl" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.9-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }

[tool.ruff.lint.per-file-ignores]
"constants.py" = ["E501"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
