[project]
name = "ImageUtilities"
version = "2.0"
description = "Use the Image Utilities integration to perform various image processing and manipulation tasks within your playbook workflows. Important: This integration requires a Remote Agent configured with the tesseract-ocr and playwright packages to function correctly."
requires-python = ">=3.11,<3.12"
dependencies = [
    "environmentcommon",
    "tipcommon",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "playwright==1.56.0",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.15-py3-none-any.whl" }
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.15-py2.py3-none-any.whl" }
pdf2image = { url = "https://files.pythonhosted.org/packages/62/33/61766ae033518957f877ab246f87ca30a85b778ebaad65b7f74fa7e52988/pdf2image-1.17.0-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
