[project]
name = "Insights"
version = "6.0"
description = "A set of insight actions created for Google SecOps Community to power up playbook capabilities.  "
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
    "tipcommon",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.7-py3-none-any.whl" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.7-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
