[project]
name = "Lists"
version = "13.0"
description = "A set of tools to facilitate managing custom lists within Google SecOps."
requires-python = ">=3.11,<3.12"
dependencies = [
    "tipcommon",
    "environmentcommon",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.0-py3-none-any.whl" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.0-py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
